--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "@admin-bro/express": "^3.0.1",
+    "@admin-bro/mongoose": "^1.1.0",
     "admin-bro": "^3.3.1",
     "express": "^4.17.1",
-    "express-formidable": "^1.2.0"
+    "express-formidable": "^1.2.0",
+    "mongoose": "^5.10.11"
   }
 }
