--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "admin-bro": "^3.3.1",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
-    "mongoose": "^5.10.11"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.10.11",
+    "tslib": "^2.3.1"
   }
 }
